--- a/environment.yml
+++ b/environment.yml
@@ -16,8 +16,11 @@ dependencies:
 - pip:
   - decorator==4.0.11
   - flask-login==0.4.0
+  - flask-markdown==0.3
+  - flask-pagedown==0.2.2
   - flask-sqlalchemy==2.2
   - flask-wtf==0.14.2
+  - markdown==2.6.8
   - passlib==1.7.1
   - pbr==2.0.0
   - six==1.10.0
